--- a/ElMundoAnimal/app/src/main/res/values/colors.xml
+++ b/ElMundoAnimal/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="azul">#28536C</color>
+    <color name="rojo">#FF80AB</color>
+    <color name="amarilloClaro">#FFFF5D</color>
 </resources>
