--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,59 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="40dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo">
+
 
         <Button
             android:id="@+id/inicioGoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:background="@drawable/button_round"
+            android:drawableStart="@drawable/icono_gmail"
+            android:padding="10dp"
+            android:text="@string/iniciarGoogle"
 
-
-
-            android:text="@string/iniciarGoogle" />
+            />
 
         <Button
             android:id="@+id/inicioEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_round"
+            android:drawableStart="@drawable/icono_email"
+            android:padding="10dp"
             android:text="@string/iniciarEmail"
 
 
             />
-
-
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtCuenta"
+
+        style="@style/texto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/noTienesCuenta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/txtRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/registro"
+        android:textColor="@color/rojoOscuro"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="@+id/txtCuenta"
+        app:layout_constraintStart_toStartOf="@+id/txtCuenta"
+        app:layout_constraintTop_toBottomOf="@+id/txtCuenta" />
 </androidx.constraintlayout.widget.ConstraintLayout>
