--- a/ElMundoAnimal/app/src/main/res/values/colors.xml
+++ b/ElMundoAnimal/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="azul">#28536C</color>
     <color name="rojo">#FF80AB</color>
     <color name="amarilloClaro">#FFFF5D</color>
+    <color name="rojoOscuro">#850B1C</color>
 </resources>
