Terminado layout y diseño de Registro
He creado el layout con el diseño del registro

--- a/ElMundoAnimal/app/src/main/res/values/colors.xml
+++ b/ElMundoAnimal/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="rojo">#FF80AB</color>
     <color name="amarilloClaro">#FFFF5D</color>
     <color name="rojoOscuro">#850B1C</color>
+    <color name="rojoCarmin">#FC000D</color>
 </resources>
