--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:scaleType="center"
-        android:src="@drawable/logo"
 
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,12 +27,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="40dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/txtCuenta"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <Button
@@ -65,19 +66,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/noTienesCuenta"
+        app:layout_constraintBottom_toTopOf="@+id/txtRegistro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:onClick="irRegistro"
         android:text="@string/registro"
         android:textColor="@color/rojoOscuro"
         android:textSize="18sp"
         android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtCuenta"
-        app:layout_constraintStart_toStartOf="@+id/txtCuenta"
-        app:layout_constraintTop_toBottomOf="@+id/txtCuenta" />
+        app:layout_constraintStart_toStartOf="@+id/txtCuenta" />
 </androidx.constraintlayout.widget.ConstraintLayout>
