--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         <Button
             android:id="@+id/inicioGoogle"
             android:layout_width="match_parent"
+            android:onClick="loginGoogle"
             android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
             android:background="@drawable/button_round"
@@ -50,6 +51,7 @@
             android:id="@+id/inicioEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="irALogInEmail"
             android:background="@drawable/button_round"
             android:drawableStart="@drawable/icono_email"
             android:padding="10dp"
