--- a/ElMundoAnimal/app/src/main/res/layout/activity_registro.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_registro.xml
@@ -16,10 +16,10 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="30dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnLoginEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+        app:layout_constraintTop_toBottomOf="@+id/icono">
 
         <EditText
             android:id="@+id/nombreCompleto"
@@ -45,7 +45,7 @@
             />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/loginEmail"
             style="@style/estiloEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
             android:inputType="textWebEmailAddress" />
 
         <EditText
-            android:id="@+id/contrasenia"
+            android:id="@+id/loginContraseña"
             style="@style/estiloEditText"
 
             android:layout_width="match_parent"
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/registro"
-        android:textAllCaps="true"
+
         android:textColor="@color/rojoCarmin"
         android:textSize="30sp"
         android:textStyle="bold|italic"
@@ -97,8 +97,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLoginEmail"
         android:layout_width="0dp"
+        android:onClick="Registrar"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_round"
@@ -109,7 +110,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/icono"
         android:contentDescription="@string/icono"
         android:layout_width="0dp"
         android:layout_height="215dp"
