--- a/ElMundoAnimal/app/src/main/res/layout/activity_login_email.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_login_email.xml
@@ -11,13 +11,14 @@
         android:id="@+id/icono"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="30dp"
         android:contentDescription="@string/icono"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
 
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
         app:srcCompat="@drawable/icono" />
 
     <LinearLayout
@@ -64,14 +65,28 @@
     <Button
         android:id="@+id/btnLoginEmail"
         android:layout_width="0dp"
-        android:onClick="login"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_round"
+        android:onClick="login"
         android:text="@string/iniciarEmail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logeate"
+        android:textColor="@color/rojoCarmin"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
