--- a/ElMundoAnimal/app/src/main/res/values/colors.xml
+++ b/ElMundoAnimal/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="rojoOscuro">#850B1C</color>
     <color name="rojoCarmin">#FC000D</color>
 
-
+    <color name="rojo3">#AA4A39</color>
     <color name="verdeOscuro">#062925</color>
     <color name="verdeNormal">#044a42</color>
     <color name="verdeClaro">#3a9188</color>
