--- a/ElMundoAnimal/app/src/main/res/menu/navigation.xml
+++ b/ElMundoAnimal/app/src/main/res/menu/navigation.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_songs"
-        android:icon="@android:drawable/ic_input_add"
-        android:title="Songs"/>
+        android:id="@+id/navigationInicio"
+        android:icon="@drawable/home"
+        android:title="@string/inicio"/>
 
     <item
-        android:id="@+id/navigation_albums"
-        android:icon="@android:drawable/ic_delete"
-        android:title="Albums"/>
+        android:id="@+id/navigationJugar"
+        android:icon="@drawable/play"
+        android:title="@string/jugar"/>
 
     <item
-        android:id="@+id/navigation_artists"
-        android:icon="@android:drawable/ic_secure"
-        android:title="Artists"/>
+        android:id="@+id/navigationPerfil"
+        android:icon="@drawable/user"
+        android:title="@string/perfil"/>
 </menu>
