--- a/ElMundoAnimal/app/src/main/res/layout/elementos_tipos_especie.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/elementos_tipos_especie.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="@color/verdeClaro2"
         android:layout_marginEnd="10dp"
         app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,17 +29,19 @@
                 android:id="@+id/txtNombre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_weight="1"
+
+                android:gravity="center"
                 android:text="hola"
+
                 android:textColor="@color/rojoOscuro"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/imgEspecie"
-                android:layout_width="102dp"
-                android:layout_height="49dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/home" />
