--- a/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
@@ -22,6 +22,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView2"
+                android:textColor="@color/rojoOscuro"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:background="@color/verdeClaro2"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/textoBuscar" />
+
             <SearchView
                 android:id="@+id/buscador"
                 android:layout_width="match_parent"
@@ -93,6 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/aniadirAnimales"
                     android:textAlignment="center"
                     android:textSize="18sp"
@@ -144,8 +156,10 @@
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="3dp"
+                    android:layout_marginBottom="10dp"
                     android:text="@string/tiposAnimales"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/lista"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -170,6 +184,9 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -180,16 +197,26 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/txtAyuda"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+
+                android:background="@color/verdeClaro2"
+                android:text="@string/ayuda"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textColor="@color/rojoOscuro"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnIrAyuda"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_margin="10dp"
+                android:background="@color/amarilloClaro"
+
+                android:text="@string/irAyuda" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
