--- a/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
@@ -103,8 +103,9 @@
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
+
+
+                    android:background="@color/verdeClaro2"
                     android:text="@string/aniadirAnimales"
                     android:textAlignment="center"
                     android:textSize="18sp"
@@ -151,11 +152,13 @@
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="3dp"
+
+                    android:textSize="18sp"
+                    android:textAlignment="center"
+
+                    android:background="@color/verdeClaro2"
                     android:layout_marginBottom="10dp"
                     android:text="@string/tiposAnimales"
                     android:textStyle="bold"
@@ -186,6 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,10 +204,10 @@
                 android:id="@+id/txtAyuda"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="@color/verdeClaro2"
-                android:text="@string/ayuda"
+
                 android:padding="5dp"
+                android:text="@string/ayuda"
                 android:textAlignment="center"
                 android:textColor="@color/rojoOscuro"
                 android:textSize="18sp"
