--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
             android:background="@drawable/button_round"
             android:drawableStart="@drawable/icono_gmail"
             android:padding="10dp"
+            android:visibility="gone"
             android:text="@string/iniciarGoogle"
 
             />
@@ -55,6 +56,7 @@
             android:background="@drawable/button_round"
             android:drawableStart="@drawable/icono_email"
             android:padding="10dp"
+            android:visibility="gone"
             android:text="@string/iniciarEmail"
 
 
@@ -67,6 +69,7 @@
         style="@style/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="@string/noTienesCuenta"
         app:layout_constraintBottom_toTopOf="@+id/txtRegistro"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +84,7 @@
         android:text="@string/registro"
         android:textColor="@color/rojoOscuro"
         android:textSize="18sp"
+        android:visibility="gone"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtCuenta"
