Diseño de Actividad Cambiar Contraseña
- Estoy actualmente implementando la funcionalidad de cambair la contraseña de un usuario

--- a/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
@@ -5,9 +5,20 @@
     android:layout_height="match_parent"
     tools:context="fragments.FragmentJugar">
 
+    <ProgressBar
+        android:id="@+id/pgCarga2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -63,6 +74,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView5"
         android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="10dp"
@@ -110,6 +122,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
         android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -161,6 +174,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:visibility="gone"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="6dp"
@@ -198,4 +212,5 @@
                 android:textSize="15sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
