--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="actividades.MainActivity">
+    tools:context="com.nicolasfernandez.elmundoanimal.actividades.MainActivity">
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/logo"
