--- a/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragments.Inicio">
+    tools:context="com.nicolasfernandez.elmundoanimal.fragments.Inicio">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
