--- a/ElMundoAnimal/app/src/main/res/layout/activity_principal.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_principal.xml
@@ -5,7 +5,7 @@
     android:background="@color/azul"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="actividades.Principal">
+    tools:context="com.nicolasfernandez.elmundoanimal.actividades.Principal">
 
     <FrameLayout
         android:id="@+id/container"
