--- a/ElMundoAnimal/app/src/main/res/layout/activity_pureba_consulta_firebase.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_pureba_consulta_firebase.xml
@@ -4,23 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="actividades.PurebaConsultaFirebase">
+    tools:context="com.nicolasfernandez.elmundoanimal.actividades.PurebaConsultaFirebase">
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="insertar"
         android:text="Button"
-        android:onClick="consulta"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listaPrueba"
+
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/reproductor"
         android:layout_width="0dp"
-        android:layout_height="585dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/imagenPrueba"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <ImageView
+        android:id="@+id/imagenPrueba"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reproductor"
+        tools:src="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
