--- a/ElMundoAnimal/app/src/main/res/layout/activity_registro.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:background="@color/azul"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="actividades.Registro">
+    tools:context="com.nicolasfernandez.elmundoanimal.actividades.Registro">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
