--- a/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragments.FragmentJugar">
+    tools:context="com.nicolasfernandez.elmundoanimal.fragments.FragmentJugar">
 
     <ProgressBar
         android:id="@+id/pgCarga2"
