Creacion de Peticion de animales
- Ahora los usuarios podran hacer una peticion para insertar animales mediante un formulario
- Diseño de Controlador de Peticiones de Animales

--- a/ElMundoAnimal/app/src/main/res/layout/elementos_mejores_jugadores.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/elementos_mejores_jugadores.xml
@@ -28,7 +28,7 @@
 
 
             <TextView
-                android:id="@+id/txtnickname"
+                android:id="@+id/txtNombreAnimal2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
