--- a/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
@@ -10,6 +10,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardFichaAnimal"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         app:cardCornerRadius="6dp"
@@ -56,6 +57,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardFichaAnimal2"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
@@ -93,4 +95,16 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/cargaFicha"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:indeterminateTint="@color/rojo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
