--- a/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_jugar.xml
@@ -98,7 +98,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/btnJugar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
