Implentacion base del Juego
- Tras una largo tiempo, por fin se ha logrado realizar la base funcional del juego
- Consulta a la bbdd todas las preguntas
- Va comprobando que la opcion del boton sea correcta
- En caso de que sea correcta va a la siguiente pregunta si no es correcta te resta 1 de vida

--- a/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
@@ -22,9 +22,12 @@
 
     <ImageView
         android:id="@+id/imgAnimal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/descripcion"
         app:layout_constraintBottom_toTopOf="@+id/txtPregunta"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +99,7 @@
         android:id="@+id/txtIdPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:lineSpacingExtra="12sp"
         android:text="@string/idPregunta"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
