--- a/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
@@ -42,7 +42,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:queryHint="@string/txtBuscador"
+                android:inputType=""
+                android:hint="@string/txtBuscador"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
                 android:iconifiedByDefault="false"
