--- a/ElMundoAnimal/app/src/main/res/layout/activity_pureba_consulta_firebase.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_pureba_consulta_firebase.xml
@@ -9,10 +9,11 @@
 
     <ImageView
         android:id="@+id/imagenPrueba"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
