--- a/ElMundoAnimal/app/src/main/res/layout/activity_seccion_animales.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_seccion_animales.xml
@@ -11,7 +11,9 @@
         android:id="@+id/cardView13"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="5dp"
         app:cardCornerRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,15 +21,14 @@
 
         <TextView
             android:id="@+id/txtNombreSeccion"
+            style="@style/texto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            style="@style/texto"
-            android:padding="3dp"
-            android:textAlignment="center"
             android:background="@color/verdeClaro2"
+            android:padding="3dp"
             android:text="@string/txtSeccionAnimales"
-             />
+            android:textAlignment="center" />
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
