--- a/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:padding="15dp"
         android:layout_marginBottom="2dp"
         android:text="@string/descripcionPregunta"
         android:textSize="23sp"
@@ -124,7 +125,8 @@
         android:id="@+id/txtPuntuacionJugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="24dp"
+        android:paddingEnd="10dp"
         android:layout_marginBottom="3dp"
         android:text="@string/puntuacion"
         android:textSize="18sp"
