--- a/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
@@ -71,6 +71,7 @@
                         android:id="@+id/txtDescripcion"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:paddingStart="10dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/descripcion"
