--- a/ElMundoAnimal/app/src/main/res/layout/fragment_perfil.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_perfil.xml
@@ -100,7 +100,7 @@
                 android:background="@color/verdeClaro2"
                 android:text="@string/cambioConstrasenia"
                 android:textAlignment="center"
-                android:textSize="20dp"
+                android:textSize="20sp"
 
 
                 android:textStyle="bold" />
